--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,27 @@ html{
   padding: none;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px transparent; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red; 
+  
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
 .title{
   margin: none !important;
   margin-block-start: none;
@@ -107,4 +128,8 @@ i{
 
 .contenido{
   width: 100%;
+}
+
+.name{
+  padding-left: 5%;
 }
