--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ html{
   margin-bottom: none;
 }
 
-.character{
+.imagenes{
   display: flex;
   justify-items: flex-start;
   height: 67.9vh;
@@ -132,4 +132,52 @@ i{
 
 .name{
   padding-left: 5%;
+}
+
+@media screen and (orientation: portrait){
+  .Titulo{
+    font-size: 1.5rem;
+  }
+  .nave{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+  }
+  .botonx{
+    width: 100%;
+    font-size: 1.2rem;
+    height: 100%;
+  }
+  .botonx:hover{
+    animation: colores 2s ease-in-out;
+  }
+  .imagenes{
+    position: absolute;
+    width: 100%;
+    opacity: 0.4;
+    z-index: 100;
+  }
+  .info{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+  #busqueda{
+    width: 100%;
+  }
+  .description{
+    z-index: 200;
+    background-color: transparent;
+    padding: 5%;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+    width: 100%;
+  }
+  #descevent{
+    width: 100%;
+  }
 }
